apps/sample-app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app
  namespace: sample-app
spec:
  to:
    kind: Service
    name: sample-app
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
